--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
+   overflow:hidden
 }
 
 /* Background image for mobile  */
@@ -34,7 +35,9 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   width: 80%;
   max-width: 500px;
+  max-height 100vh;
   color: #ffffff;
+  overflow-y:auto;
 }
 
 
