--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   width: 80%;
   max-width: 500px;
-  max-height 100vh;
+  max-height:100vh;
   color: #ffffff;
   overflow-y:auto;
 }
