--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-   overflow:hidden
+   overflow:hidden;
 }
 
 /* Background image for mobile  */
