--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width :100vh;
+  
   margin: 0;
    overflow:hidden;
 }
